# IBALearn

./: .gitignore  setup.py
IBALearn/: tensor_example.py
IBALearn/linear_regression/: linear_regression.py
IBALearn/logistic_regression/: logistic_regression.py
IBALearn/logistic_regression_binary/: __init__.py  logistic_regression_binary.py
IBALearn/neural_network/: README.md  ibatensor.pyd  neural_network.py  tensor_example.py
IBATensor/: CMakeLists.txt  IBATensor.cpp  IBATensor.h  IBATensor_binding.cpp  iba_tensor_binding.cpp  main.cpp
IBATensor/IBADeviceData/: CMakeLists.txt  CPUData.cpp  CPUData.h  CudaData.cu  CudaData.cuh  CudaDataBackwards.cu  IBADeviceData.exp  IBADeviceData.lib  build.sh  deviceData.h  main.cpp
IBATensor/matrix_opsV2/: CMakeLists.txt  library.cu  library.cuh
matrix_ops/: CMakeLists.txt  library.cu  library.cuh  library.exp  library.lib  my_cuda_program.exp  my_cuda_program.lib
notebooks/: ibatensor.pyd  test2.ipynb  we_did_it.ipynb
tests/linear_regression/: linear_regression_tests.py
tests/logistic_regression/: logistic_regression_tests.py
tests/logistic_regression_binary/: logistic_regression_binary_tests.py
